[tool.poetry]
name = "jwt-kms"
version = "0.1.4"
description = "Library to offload some JWT crypto operations to KMS"
authors = ["Juha-Matti Tapio <jmtapio@verkkotelakka.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmtapio/python-jwt-kms"


[tool.poetry.dependencies]
python = ">=3.9.2"
cryptography = ">=44.0.0"

[tool.poetry.dev-dependencies]
jwcrypto = "^1.5.6"
boto3 = "^1.35.74"

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
